# clawtest

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  killport  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
autodev/: README.md  __init__.py  autodev  autodev-stop  build.py  driver.py  init.py  phases.py  publish.py  runner.py  skills.py  state.py
autodev/docs/: architecture.md  logs.md  phases.md  resume-stop.md  skills.md
claude_dev_assistant/: README.md  __init__.py  claude-dev  claude-dev.spec  driver.py  pyproject.toml  setup.py
claude_dev_assistant/core/config/: config_manager.py
claude_dev_assistant/core/memory/: memory_manager.py
claude_dev_assistant/core/review/: review_system.py
claude_dev_assistant/core/shared/: __init__.py  logger.py  reporter.py
claude_dev_assistant/core/skills/: skills_manager.py
claude_dev_assistant/core/state/: state_manager.py
claude_dev_assistant/core/workflow/: workflow_engine.py
claude_dev_assistant/tests/: test_driver.py  test_shared.py
docs/: 01-RESEARCH.md  02-REQUIREMENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  REVIEW.md  TECH_DESIGN.md
src/: app.py  models.py  routes.py  services.py
src/api/: __init__.py  minimax.py
src/handlers/: __init__.py  codeExecutor.py
tests/: test_app.py
tests/integration/: test_api_endpoints.py
tests/test_api/: test_code_executor.py  test_minimax_client.py
web/: README.md  deploy.sh
web/backend/: config.yaml  config.yaml.example  go.mod  main.go
(+24 files in other folders)
